--- a/site/assets/style/index.scss
+++ b/site/assets/style/index.scss
@@ -2,3 +2,17 @@
     margin: 7px 10px;
     font-size: 1.3em;
 }
+
+html,
+body,
+#root {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background-color: #f4f4f4;
+    font-feature-settings: "liga", "kern";
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: Colfax, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
