--- a/site/assets/style/index.scss
+++ b/site/assets/style/index.scss
@@ -16,3 +16,8 @@ body,
     -moz-osx-font-smoothing: grayscale;
     font-family: Colfax, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+#root {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
