--- a/components/Actionsheet/style/index.scss
+++ b/components/Actionsheet/style/index.scss
@@ -1,6 +1,6 @@
 $Actionsheet: "weui-actionsheet";
 
-.#{$Actionsheet}-wrapper {
+.weui-popup-content.#{$Actionsheet}-wrapper {
     position: fixed;
     left: 0;
     bottom: 0;
