--- a/components/Tooptips/style/index.scss
+++ b/components/Tooptips/style/index.scss
@@ -1,6 +1,6 @@
 $Toptips: "weui-toptips";
 
-.#{$Toptips}-wrapper {
+.weui-popup-content.#{$Toptips}-wrapper {
     position: fixed;
     top: 8px;
     left: 8px;
