--- a/components/Dialog/style/index.scss
+++ b/components/Dialog/style/index.scss
@@ -15,6 +15,12 @@ $Dialog: "weui-dialog";
     overflow: hidden;
     z-index: 1001;
 }
+.#{$Dialog} {
+    max-height: 90%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
 .#{$Dialog}__hd {
     padding: 32px 24px 16px;
 }
