修复`HalfScreenDialog`左上角关闭按钮事件

--- a/components/Keyboard/style/index.scss
+++ b/components/Keyboard/style/index.scss
@@ -136,7 +136,7 @@ $Keyboard: "xy-keyboard";
             }
 
             &.confirm-btn {
-                height: 416px;
+                height: calc(104px * 3);
             }
         }
     }
