--- a/components/HalfScreenDialog/style/index.scss
+++ b/components/HalfScreenDialog/style/index.scss
@@ -66,6 +66,7 @@ $HalfScreen: "weui-half-screen-dialog";
     -webkit-hyphens: auto;
     hyphens: auto;
     overflow-y: auto;
+    max-height: 44vh;
 }
 .#{$HalfScreen}__desc {
     padding-top: 8px;
