Picker数据源变动更新label, DatePicker修复月份计算

--- a/components/Preview/style/index.scss
+++ b/components/Preview/style/index.scss
@@ -105,6 +105,7 @@ $PreviewPrefix: "weui-form-preview";
     overflow: hidden;
     word-break: normal;
     word-wrap: break-word;
+    min-height: 2em;
 }
 
 .#{$PreviewPrefix}__btn {
