--- a/components/Form/style/index.scss
+++ b/components/Form/style/index.scss
@@ -1,3 +1,4 @@
+@import "../../Styles/themes.scss";
 $Form: "weui-form";
 
 .#{$Form} {
@@ -75,6 +76,24 @@ $Form: "weui-form";
 input.valid-error {
     color: #ff4949;
 }
+.weui-btn.weui-vcode-btn:not(.weui-btn_text) {
+    font-size: 30px;
+    padding: 0 24px;
+    margin-left: 0;
+    height: auto;
+    width: auto;
+    line-height: 2em;
+    color: #06ae56;
+    background-color: #f2f2f2;
+    border: 0;
+    outline: 0;
+
+    &.weui-btn_disabled {
+        color: rgba(0, 0, 0, 0.18);
+        background-color: $--disabled-bg;
+    }
+}
+
 .weui-input:disabled,
 .weui-input:disabled,
 .weui-textarea:disabled,
@@ -91,18 +110,6 @@ input.valid-error {
 .weui-textarea[readonly],
 .weui-textarea[readonly] {
     color: rgba(0, 0, 0, 0.5);
-}
-.weui-btn.weui-vcode-btn {
-    font-size: 30px;
-    padding: 0 24px;
-    margin-left: 0;
-    height: auto;
-    width: auto;
-    line-height: 2em;
-    color: #06ae56;
-    background-color: #f2f2f2;
-    border: 0;
-    outline: 0;
 }
 
 .weui-select {
